# lab4_prot

./: .gitignore  CMakeLists.txt  Makefile  commands.h  main.c  my_tests.c
Google_tests/: CMakeLists.txt  my_tests.cpp
binary_tree/: Node.c  Tree.c  binary_tree.h  file_input.c  iterator.c  key_and_info.c
different/: Makefile
libs/: FGetLine.c  MyString.c
libs/headers/: Errors.h  MyString.h
src/: CMakeLists.txt  commands.h  main.c
src/binary_tree/: CMakeLists.txt  Tree.c  binary_tree.h  file_input.c  graphviz_modul.c  iterator.c  key_and_info.c  test_g.gv
src/libs/: CMakeLists.txt  MyString.c  SortsSearch.c
src/libs/headers/: FGetLine.h  MyString.h
src/tree_dialog/: dialog_functions.c  tree_dialog.h
tree_dialog/: add_tree_dialog.c  dialog_functions.c  tree_dialog.h
